# staden-trunk

./: ChangeLog  LICENCE.rtf  LICENCE.txt  Makefile  NEWS  README  README.build  Version  binary_files  mklinks  staden.login  staden.profile
src/: ChangeLog  Makefile  Makefile.in  Makefile.thirdparty  NEWS  README.build  README.fedora8  README.macosx  ReleaseNotes  bootstrap  configure.in  global.mk  shlib.conf.in  staden.login  staden.profile  staden_config.h.in  system.mk.in
src/MacOSX/: wrapper.c
src/Misc/: FtoC.c  FtoC.h  Makefile  README  array.c  array.h  array_arith.c  array_arith.h  bitmap.c  bitmap.h  crash.c  date.c  dependencies  dstring.c  dstring.h  error.c  error.h  filenames.c  files.c  getfile.c  getfile.h  locks.c  locks.h  misc.h  os.h  parse_db.c  reg_exp.h  shell.c  spBiolims.h  string_alloc.c  string_alloc.h  strings.c  strtol64.c  usleep-bsd.c  usleep-gen.c  usleep.c  vlen.c  vlen.h  win_funcs.c  win_funcs.h  (+3 more)
src/abi/: 2rs.c  Makefile  README  abiIO.c  abiIO.h  dependencies  getABISampleName.c  getABIcomment.c  getABIdate.c  getABIfield.c  getABIfloat.c  getABIhex.c  getABIraw.c  getABIstring.c
src/ac_stubs/: ax_func_va_copy.m4  ax_lib_curses.m4  ax_lib_itcl.m4  ax_lib_itk.m4  ax_lib_iwidgets.m4  ax_lib_lzma.m4  ax_lib_png.m4  ax_lib_samtools.m4  ax_lib_staden_io_lib.m4  ax_lib_tklib.m4  ax_lib_zlib.m4  libcurl_check_config.m4  tcl.m4
src/alf/: Makefile  README  alfsplit.c  dependencies
src/convert/: Makefile  bapDB.c  bapDB.h  bapIO.c  bapIO.h  convert.doc  dapDB.c  dapDB.h  dapIO.c  dapIO.h  dependencies  flat_sd.c  flat_sd.h  gapDB.c  gapDB.h  list.c  list.h  main.c  newtypes.h  process.c  process.h  sap2dap.c
src/copy_reads/: Makefile  copy_reads  copy_reads.c  copy_reads.h  copy_reads.in  copy_reads.tcl  copy_reads_globals.c  copy_reads_globals.h  copy_reads_main.tcl  dependencies  tclIndex
src/data/: Makefile  vector_primer
src/eba/: Makefile  conf.c  conf.h  dependencies  qual.c
src/find_renz/: Makefile  dependencies  find_renz.c
src/g/: Makefile  README  bitmap_test.c  dependencies  freetree-io.h  freetree.c  freetree.h  g-db.c  g-db.h  g-debug.c  g-defs.h  g-error.c  g-error.h  g-filedefs.h  g-files.c  g-files.h  g-io.c  g-io.h  g-os.h  g-request.c  g-struct.c  g-struct.h
src/gap4/: GTAGDB  IO.c  IO.h  IO2.c  IO2.h  IO3.c  Makefile  NOTEDB  QueueInterface.h  SeqQueueTypes.h  acd2tag.tcl  actf.c  actf.h  active_tags.c  allelic_discreps.c  allelic_discreps.h  alter_rel.c  alter_rel.h  alter_rel.tcl  assemble_direct.c  assemble_direct.h  assemble_direct.tcl  auto_assemble.c  auto_assemble.h  auto_assemble.tcl  auto_break.c  auto_break.h  break_contig.c  break_contig.h  break_contig.tcl  bubbl3.c  cap2rc  check_assembly.c  check_assembly.h  check_assembly.tcl  clip.c  clip.h  clip.tcl  clones.c  clones.h  (+242 more)
src/gap5/: ChangeLog  IO.h  IO2.h  Makefile  NEWS  ace.c  actf.c  active_tags.c  active_tags.h  afg.c  afg.h  assemble_single.tcl  b+tree2.c  b+tree2.h  baf.c  baf.h  bam.c  bam.h  break_contig.c  break_contig.h  break_contig.tcl  caf.c  caf.h  caf2baf.pl  check_assembly.c  check_assembly.h  check_assembly.tcl  check_database.tcl  complement.tcl  configure.tcl  consen.c  consen.h  consen.tcl  consensus.c  consensus.h  contig_editor.tcl  contig_extend.c  contig_extend.h  contig_extend.tcl  contig_graph.tcl  (+215 more)
src/get_scf_field/: Makefile  dependencies  get_scf_field.c
src/haplo/: Makefile  dependencies  haplo.h  haplo.tcl  haplo_cons.c  haplo_snps.c  haplo_split.c  haplo_tcl.c  tclIndex
src/hetins/: Makefile  hetins.c
src/incrTcl-3.3cvs/: README
src/init_exp/: Makefile  dependencies  init_exp.c
src/io_lib/: CHANGES  COPYRIGHT  ChangeLog  Makefile  Makefile.am  Makefile.in  README  acinclude.m4  bootstrap  config.h.in  configure  configure.in  dependencies  io_lib-config.in  io_lib.m4  mkinstalldirs  options.mk
src/licence/: README  check_licence.c  licence.h  licence_utils.c  licence_utils.h  md52.c  valid_seq.c
src/make_weights/: Makefile  dependencies  make_weights.c
src/mk/: README  _windows.mk  al.mk  alpha.mk  alphagcc.mk  clip.mk  composition.mk  convert.mk  cop.mk  dec.mk  eba.mk  expGetSeq.mk  fakkern.mk  finish.mk  frog.mk  g.mk  gap.mk  gap4.mk  getMCH.mk  get_scf_field.mk  global.mk  indexseqlibs.mk  init_exp.mk  io_lib.mk  linux-ia64.mk  linux-stlport.mk  linux-x86_64.mk  linux.mk  lookup.mk  macosx-aqua.mk  macosx.mk  makeSCF.mk  newted.mk  nip4.mk  osp.mk  osp4.mk  qclip.mk  root.mk  screen_seq.mk  seq_utils.mk  (+20 more)
src/mutlib/: Makefile  align.cpp  align.hpp  array.hpp  basecall.cpp  basecall.hpp  caller.cpp  caller.hpp  caller_base.cpp  caller_base.hpp  caller_level.cpp  caller_level.hpp  caller_snr.cpp  caller_snr.hpp  dependencies  dnatable.cpp  dnatable.hpp  list.hpp  listitem.hpp  matrix.hpp  mutationtag.cpp  mutationtag.hpp  mutationtag_utils.cpp  mutationtag_utils.hpp  mutlib.h  mutscan.cpp  mutscan.hpp  mutscan_analysis.cpp  mutscan_analysis.hpp  mutscan_helper.cpp  mutscan_parameters.cpp  mutscan_parameters.hpp  mutscan_preprocess.cpp  mutscan_preprocess.hpp  mutscan_validate.cpp  muttag.cpp  muttag.hpp  parameter.hpp  pathutil.h  peakcall.cpp  (+35 more)
src/mutscan/: Makefile  main.cpp  pathutil.cpp  staden.h  stringlist.cpp  stringlist.hpp
src/polyA_clip/: Makefile  dependencies  polyA_clip.c  seqInfo.c  seqInfo.h
src/prefinish/: Makefile  add_stops.tcl  args.template  assert.tcl  chemistry.tcl  config.prefinish  delta_g.c  dependencies  dist.c  dust.c  dust.h  fake_insert_sizes.tcl  finish.c  finish.h  finish.tcl  finish_cDNA  finish_cDNA_ends_only  finish_distributions.c  finish_filter.c  finish_filter.h  finish_hash.c  finish_hash.h  finish_long.c  finish_long.h  finish_main.c  finish_main.h  finish_pcr.c  finish_pcr.h  finish_reverse.c  finish_reverse.h  finish_sanger  finish_sanger.tcl  finish_utils.c  finish_utils.h  finish_walk.c  finish_walk.h  gap_cli_arg.c  gap_cli_arg.h  help  hierarchybook.itk  (+28 more)
src/pregap4/: Makefile  blank.xbm  config_files.tcl  conversions.tcl  edit_exp.tcl  gui.tcl  images.tcl  modules.tcl  name_scheme.tcl  pregap4  pregap4.bat  pregap4.in  pregap4.tcl  pregap4rc  (+8 more)
(+2432 files in other folders)
