dnl Process this file with aclocal and autoconf to produce a configure script.
AC_INIT([staden],[2.0])

# Check that we're running in a subdirectory. If not create one and rerun.
# This ensures that the root directory does not get polluted with the
# binary output files and also protects the root Makefile (not derived from
# Makefile.in).


AC_CONFIG_HEADERS(staden_config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
#AC_PROG_INSTALL

dnl Check for library dependencies
LIBCURL_CHECK_CONFIG(,,[have_curl=yes], [have_curl=no])
AX_LIB_ZLIB(,[have_zlib=yes], [AC_MSG_ERROR([Abort: no zlib])])
AX_LIB_SAMTOOLS(0.1.3,[have_bam=yes],[AC_MSG_ERROR([Abort: no samtools])])
AX_LIB_IO_LIB(1.11.0,[have_io_lib=yes],[AC_MSG_ERROR([Abort: no staden-io_lib found])])

#dnl Add --with-tcl option
#SC_PATH_TCLCONFIG
#SC_PATH_TKCONFIG

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h limits.h unistd.h)
AC_CHECK_HEADER(zlib.h)

dnl Large file support
AC_SYS_LARGEFILE
AC_FUNC_FSEEKO

dnl Checks for library functions.
AC_SEARCH_LIBS(cos, m)

dnl X11
AC_PATH_XTRA

AC_C_BIGENDIAN

dnl Do we have the va_copy function?
AX_FUNC_VA_COPY

PWD=`pwd`
AC_SUBST([PWD])

#-----------------------------------------------------------------------------
# Tcl TEA usage
TEA_INIT([3.7])

# Load the tclConfig.sh and tkConfig.sh
TEA_PATH_TCLCONFIG
TEA_LOAD_TCLCONFIG

TEA_PATH_TKCONFIG
TEA_LOAD_TKCONFIG

# Handles --prefix option
#TEA_PREFIX

# We're naughty - for now need some internals of Tk, in particular canvas
# bits and bobs
TEA_PRIVATE_TCL_HEADERS
TEA_PUBLIC_TK_HEADERS
TEA_PRIVATE_TK_HEADERS

AC_SUBST([TCL_SHLIB_CFLAGS])
AC_SUBST([TCL_SHLIB_LD])
AC_SUBST([TCL_SHLIB_LD_LIBS])
AC_SUBST([TCL_SHLIB_SUFFIX])
AC_SUBST([TCL_DL_LIBS])
AC_SUBST([TCL_VERSION])
AC_SUBST([TCL_INCLUDE_SPEC])
AC_SUBST([TCL_LIB_SPEC])
AC_SUBST([TCL_LIBS])
AC_SUBST([TK_VERSION])
AC_SUBST([TK_INCLUDE_SPEC])
AC_SUBST([TK_LIB_SPEC])
AC_SUBST([TK_LIBS])

# tklib - extra widgets for Tk
AX_LIB_TKLIB(,[have_tklib=yes], [AC_MSG_ERROR([Abort: no tklib package found, use --with-tklib=DIR])])

#-----------------------------------------------------------------------------
AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([system.mk])
AC_CONFIG_FILES([shlib.conf])
AC_OUTPUT

