AUTOMAKE_OPTIONS = foreign no-dependencies

SUBDIRS = utils abi alf ctf exp_file plain scf ztr read progs

man_MANS = \
	man/man3/exp2read.3 \
	man/man3/ExperimentFile.3 \
	man/man3/fread_reading.3 \
	man/man3/fread_scf.3 \
	man/man3/fwrite_reading.3 \
	man/man3/fwrite_scf.3 \
	man/man3/read2exp.3 \
	man/man3/read2scf.3 \
	man/man4/Read.4 \
	man/man3/read_allocate.3 \
	man/man3/read_deallocate.3 \
	man/man3/read_reading.3 \
	man/man3/read_scf.3 \
	man/man3/read_scf_header.3 \
	man/man3/scf2read.3 \
	man/man3/write_reading.3 \
	man/man3/write_scf.3 \
	man/man3/write_scf_header.3

EXTRA_DIST = README COPYRIGHT CHANGES man options.mk bootstrap
