noinst_LTLIBRARIES = libexp_file.la

libexp_file_la_SOURCES = \
	expFileIO.c \
	expFileIO.h

INCLUDES = \
	-I${top_srcdir} \
	-I${top_srcdir}/include \
	-I${top_srcdir}/read \
	-I${top_srcdir}/alf \
	-I${top_srcdir}/abi \
	-I${top_srcdir}/ctf \
	-I${top_srcdir}/ztr \
	-I${top_srcdir}/plain \
	-I${top_srcdir}/scf \
	-I${top_srcdir}/exp_file \
	-I${top_srcdir}/utils

pkginclude_HEADERS = \
	expFileIO.h
