noinst_LTLIBRARIES = libplain.la

libplain_la_SOURCES = \
	plain.h \
	seqIOPlain.c

INCLUDES = \
	-I${top_srcdir} \
	-I${top_srcdir}/read \
	-I${top_srcdir}/alf \
	-I${top_srcdir}/abi \
	-I${top_srcdir}/ctf \
	-I${top_srcdir}/ztr \
	-I${top_srcdir}/plain \
	-I${top_srcdir}/scf \
	-I${top_srcdir}/exp_file \
	-I${top_srcdir}/utils

pkginclude_HEADERS = \
	plain.h
