noinst_LTLIBRARIES = libscf.la

libscf_la_SOURCES = \
	misc_scf.c \
	read_scf.c \
	scf.h \
	write_scf.c

INCLUDES = \
	-I${top_srcdir} \
	-I${top_srcdir}/include \
	-I${top_srcdir}/read \
	-I${top_srcdir}/alf \
	-I${top_srcdir}/abi \
	-I${top_srcdir}/ctf \
	-I${top_srcdir}/ztr \
	-I${top_srcdir}/plain \
	-I${top_srcdir}/scf \
	-I${top_srcdir}/exp_file \
	-I${top_srcdir}/utils

#EXTRA_DIST = README SCF3.00 SCF3.10

pkginclude_HEADERS = \
	scf.h
